<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeTalks</string>


    <string name="update_service_versionIsAlreadyNew">已经是最新版本了</string>
    <string name="update_service_sureToUpdate">确定更新版本吗</string>
    <string name="update_service_updateLog">更新日志</string>
    <string name="update_service_installNewVersion">安装新版本</string>
    <string name="update_service_laterNotify">稍后提醒</string>
    <string name="update_service_haveNewVersion">版本更新</string>

    <string name="setting_preference_voice">语音</string>

    <string name="entry_register_activity_password">密码</string>
    <string name="login">登录</string>
    <string name="conversation_messages">会话</string>
    <string name="contact">联系人</string>
    <string name="friendsquare">广场</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_title">我</string>
    <string name="discover_title">发现</string>
    <string name="friendcicle">朋友圈</string>
    <string name="detail">详细内容</string>
    <string name="goods_discription">内容描述</string>
    <string name="seletct_a_pic">从相册选择一张照片</string>
    <string name="submit">提交</string>
    <string name="publish">发布</string>


    <string name="login_username_hint">请输入用户名</string>
    <string name="ensurePasswordHint">请重复输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="register">注册</string>
    <string name="resetpass">重置密码</string>

    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>

    <string name="not_have_account">忘记密码？</string>
    <string name="register_rightnow">新用户</string>
    <string name="discover_metres">米</string>
    <string name="discover_unknown">未知</string>
    <string name="discover_recent_login_time">最近登录时间:</string>
    <string name="contact_account">账号 </string>
    <string name="contact_search">搜索</string>
    <string name="profile_vibrate">震动</string>
    <string name="contact_chat">发起会话</string>
    <string name="contact_add_friend">添加好友</string>
    <string name="contact_new_friends">新朋友</string>
    <string name="contact_deleteFriendRequest">删除好友请求</string>
    <string name="contact_agreed">已同意</string>
    <string name="contact_deleteContact">删除联系人</string>
    <string name="common_sure">确定</string>
    <string name="contact_deleteSucceed">删除成功</string>
    <string name="contact_findFriends">查找好友</string>
    <string name="contact_add">添加</string>
    <string name="contact_sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="contact_personalInfo">个人资料</string>
    <string name="contact_detailInfo">详细资料</string>
    <string name="contact_male">男</string>
    <string name="contact_female">女</string>
    <string name="profile_notifySetting">提醒设置</string>
    <string name="profile_notifyWhenNews">接收新消息通知</string>
    <string name="conversation_group">群组</string>
    <string name="conversation_name">群组名称</string>
    <string name="conversation_create">创建</string>
    <string name="conversation_Members">群组成员</string>
    <string name="conversation_inviteSucceed">已发出邀请</string>
    <string name="conversation_inviteMembers">邀请群成员</string>
    <string name="conversation_kickTips">确认要踢走该成员吗</string>
    <string name="conversation_detail_invite">邀请</string>
    <string name="conversation_quitGroup">退群</string>
    <string name="conversation_quit_group_tip">确定要退出该群组？</string>

    <string name="utils_kilometres">公里</string>
    <string name="profile_fragment_checkUpdate">检查更新</string>
    <string name="discover_fragment_sort">排序</string>
    <string name="discover_fragment_loginTime">登录时间</string>
    <string name="discover_fragment_distance">距离</string>
    <string name="contact_alreadyCreateAddRequest">请求已发送</string>
    <string name="conversation_alreadyQuitConv">已退出群</string>
    <string name="conversation_detail_kickSucceed">已踢走该成员</string>
    <string name="conversation_detail_title">详情</string>

    <string name="chat_location_activity_send">发送</string>
    <string name="chat_getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="chat_location_mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="chat_cannotGetYourAddressInfo">无法获取到您的位置信息！</string>

    <string name="push_add_request">您有新的好友申请</string>
    <string name="message_when_agree_request">我们已经是好友了，来聊天吧</string>

    <string name="chat_base_list_view_listEmptyHint">无数据</string>
    <string name="chat_utils_tips">提示</string>
    <string name="chat_utils_please_choose">请选择</string>
    <string name="chat_utils_share">分享</string>
    <string name="chat_utils_right">好的</string>
    <string name="chat_utils_hardLoading">努力加载中...</string>
    <string name="chat_common_cancel">取消</string>
    <string name="chat_common_emptyStr" />
    <string name="chat_position">位置</string>
    <string name="chat_common_avatar">头像</string>
    <string name="chat_common_username">用户名</string>
    <string name="chat_common_nickname">昵称</string>
    <string name="chat_common_please_input_hint">请输入{0}</string>
    <string name="chat_common_change_title">{0}</string>
    <string name="chat_newMessage">新的消息</string>
    <string name="chat_cannotFindResult">抱歉，未能找到结果</string>
    <string name="chat_pleaseCheckNetwork">请检查网络</string>
    <string name="load_more_footer_hint_normal">查看更多</string>
    <string name="login_null_name_tip">请输入用户名</string>

    <string name="chat_geoIsSame">获取坐标相同</string>
    <string name="chat_reverseGeoCodeResultIs">反编码得到的地址：</string>

    <string name="chat_bottom_redpacket">红包</string>
    <string name="money_msg_take_money">你领取了自己的红包</string>
    <string name="money_msg_take_someone_money">你领取了%1$s的红包</string>
    <string name="money_msg_someone_take_money">%1$s领取了你的红包</string>
    <string name="money_msg_someone_take_money_same">%1$s领取了%2$s的红包</string>
    <string name="leancloud_luckymoney">LeanCloud红包</string>
    <string name="exclusive_red_envelope">专属红包</string>
    <string name="chat_bottom_transfer">转账</string>
    <string name="transfer_msg_sent">对方已收到转账</string>
    <string name="transfer_msg_received">已收到对方转账</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>