<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="@dimen/common_horizontal_margin"
        android:paddingLeft="@dimen/common_horizontal_margin">



        <EditText
            android:id="@+id/activity_login_et_username"
            android:singleLine="true"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_marginTop="220dp"
            android:drawableLeft="@drawable/login_icon_account"
            android:drawablePadding="25dip"
            android:hint="@string/login_username_hint"
            android:paddingLeft="15dip"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColorHint="#ffdddddd"/>

        <EditText
            android:id="@+id/activity_login_et_password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:drawableLeft="@drawable/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/login_password_hint"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd"/>

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/common_btn"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_searchpass_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/not_have_account"
                android:textColor="@color/entry_blue"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/activity_login_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="30dp"
                android:gravity="center_vertical"
                android:text="@string/register_rightnow"
                android:textColor="@color/entry_blue"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
